--- a/style.css
+++ b/style.css
@@ -7,10 +7,16 @@
 
 /* Body Styling */
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 0;
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f4f4f4;
+    background-color: #f0f0f0;
     margin: 0;
 }
 
@@ -187,13 +193,24 @@ header {
 .buy-button:hover {
     background-color: #155a3f; /* Darker shade on hover */
 }
-s
+
+.login-container {
+    width: 300px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 10; /* Ensures it stays above the footer */
+    margin-bottom: auto;
+}
 
 
 /* Footer Styling */
 footer {
     background-color: #333;
     color: white;
-    padding: 20px 0;
+    padding: 20px ;
     text-align: center;
+    width: 100%;
+    margin-top: auto;
 }
