--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@ body {
     min-height: 100vh;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    line-height: 1.6;
-    color: #333;
     background-color: #f0f0f0;
     margin: 0;
 }
@@ -194,14 +192,36 @@ header {
     background-color: #155a3f; /* Darker shade on hover */
 }
 
+/* Menu Styling */
+.menu {
+    background-color: #333;
+    width: 100%;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.menu button {
+    background-color: #666;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 0 5px;
+    font-size: 16px;
+}
+
 .login-container {
     width: 300px;
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    display: none;
     z-index: 10; /* Ensures it stays above the footer */
-    margin-bottom: auto;
+    
 }
 
 
